Fix: indent of lists within content, base line-height

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -152,6 +152,10 @@ nav {
     padding-top: 3rem;
     margin-left: 8rem;
     margin-right: 8rem;
+
+    ul, ol, dl { 
+      margin-left: 35px;
+    }
   }
 }
 
