--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,15 @@
 
     <div class="content">
       <div class="bar">
-
+        <div class="bar__icons">
+          {% for item in site.links %}
+          <div class="icons__icon">
+            <a href="{{item.href}}" alt="{{item.name}}">
+              <img width="35" height="35" src="{{ item.icon }}" alt="{{ item.name }}" />
+            </a>
+          </div>
+          {% endfor %}
+        </div>
       </div>
       <div class="main">
         <h1>{{ page.title }}</h1>
