--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,7 @@
     {% include sidebar.html %}
 
     <div class="content">
-      <div class="bar">
-        <div class="bar__icons">
-          {% for item in site.links %}
-          <div class="icons__icon">
-            <a href="{{item.href}}" alt="{{item.name}}">
-              <img width="35" height="35" src="{{ item.icon }}" alt="{{ item.name }}" />
-            </a>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
+      {% include content-bar.html %}
       <div class="main">
         <h1>{{ page.title }}</h1>
         {{ content }}
