--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -6,9 +6,7 @@
     <div class="page-wrap">
         {% include sidebar.html %}
         <div class="content">
-            <div class="bar">
-
-            </div>
+            {% include content-bar.html %}
             <div class="main">
                 <h1>{{ page.title }}</h1>
                 {{ content }}
