--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -71,13 +71,17 @@
 .logo {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   box-sizing: border-box;
   text-align: left;
 
   width: $logo_width;
   height: 90px;
   border-bottom: 1px solid $logo_border;
-  padding: $logo_padding;
+
+  div {
+    justify-content: center;
+  }
 
   img {
     width: $logo_img_width;
@@ -172,6 +176,7 @@ nav {
     width: 60%;
     padding-top: 3rem;
     margin: 0 auto;
+    margin-bottom: 50px;
 
     ul,
     ol,
@@ -184,7 +189,7 @@ nav {
 .steps {
   width: 100%;
   display: flex;
-  margin: 50px 0 100px;
+  margin: 50px 0 50px;
 
   .step {
     display: flex;
