Added logo and favicon

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <section class="sidebar">
   <figure class="logo">
-    <img src="https://www.42.nl/wp-content/uploads/2018/02/42-logo.png" alt="" />
+    <img src="{{ site.baseurl }}/assets/img/logo.svg" alt="" />
     <div class="flex flex--column">
       <span class="site-title">{{ site.title }}</span>
       <span class="site-description">{{ site.description }}</span>
